# CompanyFleetApp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
database/: DatabaseManager.cpp  DatabaseManager.h
models/: Car.h  Client.h  CorporateClient.h  IndividualClient.h  Maintenance.h  Motorcycle.h  Transaction.h  Truck.h  Vehicle.h
ui/: ClientDialog.cpp  ClientDialog.h  MainWindow.cpp  MainWindow.h  MaintenanceDialog.cpp  MaintenanceDialog.h  TransactionDialog.cpp  TransactionDialog.h  VehicleDialog.cpp  VehicleDialog.h
